--- a/Ch7/lounge.css
+++ b/Ch7/lounge.css
@@ -13,3 +13,13 @@ h1 {
 p {
     color: maroon;
 }
+
+p.greentea {
+    color:green;
+}
+p.raspberry {
+    color:blue;
+}
+p.blueberry {
+    color:purple;
+}
