--- a/Ch8/journal.css
+++ b/Ch8/journal.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: "Emblema One";
+    src: url("EmblemaOne-Regular.woff"),
+        url("EmblemaOne-Regular.ttf");
+}
 body {
     font-family: Verdana, Geneva, Ariel, sans-serif;
+}
+h1 {
+    font-family: "Emblema One", sans-serif;
 }
