--- a/Ch9/lounge.css
+++ b/Ch9/lounge.css
@@ -21,4 +21,10 @@ h2 {
     border-width: 1px;
     border-style: solid;
     background-color: #a7cece;
+    padding: 25px;
+    margin: 30px;
+    line-height: 1.9em;
+    font-style: italic;
+    color: #444444;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
