--- a/Ch9/lounge.css
+++ b/Ch9/lounge.css
@@ -16,7 +16,7 @@ h2 {
     font-size: 130%;
 }
 
-.guarantee {
+#guarantee {
     border-color: black;
     border-width: 1px;
     border-style: solid;
