--- a/Ch11/starbuzz.css
+++ b/Ch11/starbuzz.css
@@ -2,29 +2,46 @@ body {
   background-color: #b5a789;
   font-family:      Georgia, "Times New Roman", Times, serif;
   font-size:        small;
-  margin:           0px;
+  margin:           10px;
 }
 
 #header {
   background-color: #675c47;
-  margin:           10px;
+  margin:           10px 10px 0px 10px;
   height:           108px;
 }
 
+#tableContainer {
+    display: table;
+    border-spacing: 10px;
+}
+
+#tableRow {
+    display: table-row
+}
+
 #main {
-  background:       #efe5d0 url(images/background.gif) top left;
-  font-size:        105%;
-  padding:          15px;
-  margin:           0px 330px 10px 10px;
+    display: table-cell;
+    background: #efe5d0 url(images/background.gif) top left;
+    font-size: 105%;
+    padding: 15px;
+    vertical-align: top;
 }
 
 #sidebar {
-  background:       #efe5d0 url(images/background.gif) bottom right;
-  font-size:        105%;
-  padding:          15px;
-  margin:           0px 10px 10px 10px;
-  width: 280px;
-  float: right;
+    display: table-cell;
+    background: #efe5d0 url(images/background.gif) bottom right;
+    font-size: 105%;
+    padding: 15px;
+    vertical-align: top;
+}
+
+#drinks {
+    display: table-cell;
+    background-color: #efe5d0;
+    width: 20%;
+    padding: 15px;
+    vertical-align: top;
 }
 
 #footer {
@@ -32,7 +49,7 @@ body {
   color:            #efe5d0;
   text-align:       center;
   padding:          15px;
-  margin:           10px;
+  margin:           0px 10px 0px 10px;
   font-size:        90%;
   clear: right;
 }
@@ -58,4 +75,11 @@ a:visited {
   color:            #675c47;
   text-decoration:  none;
   border-bottom:    thin dotted #675c47;
+}
+
+div#tableContainer {
+    display: table;
+}
+div#tableRow {
+    display: table-row;
 }
