adjusted column alignment

--- a/Ch13/journal.css
+++ b/Ch13/journal.css
@@ -36,6 +36,13 @@ td, th {
     padding: 5px;
 }
 
+td.centered {
+    text-align: center;
+}
+td.right {
+    text-align: right;
+}
+
 caption {
     font-style: italic;
     padding-top: 8px;
