--- a/Ch13/journal.css
+++ b/Ch13/journal.css
@@ -47,3 +47,11 @@ caption {
     font-style: italic;
     padding-top: 8px;
 }
+
+th {
+    background-color: #cc6600;
+}
+
+.cellcolor {
+    background-color: #fcba7a;
+}
